infrastructure/base/configs/gateway/tls-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
  namespace: gateway
  labels:
    color: blue
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      "lbipam.cilium.io/sharing-key": "lan-traffic"
    labels:
      color: blue
  listeners:
  - name: https-listener
    protocol: HTTPS
    port: 443
    hostname: "*.lan.${DOMAIN}"
    tls:
      certificateRefs:
      - kind: Secret
        name: secret-quantum-cert
        namespace: gateway
    allowedRoutes:
      namespaces:
        from: All
